maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: not enough arguments for method keepHandOnSideWall: (sommeAngle: Int)Int.
Unspecified value parameter sommeAngle.
	{keepHandOnSideWall()}
                           ^Escaper:28: error: type mismatch;
 found   : Unit
 required: Int
		avance()}
                      ^Escaper:31: error: type mismatch;
 found   : Unit
 required: Int
				{avance()}
                                       ^Escaper:35: error: type mismatch;
 found   : Unit
 required: Int
						avance()}
                                                      ^Escaper:37: error: type mismatch;
 found   : Unit
 required: Int
						avance()}
                                                      ^